[tool.poetry]
name = "proc-mon"
version = "0.1.0"
description = ""
authors = ["Sean McCarthy <sean.mccarthy@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
psutil = "^5.9.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
